fixed another issue

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="overlay"></div>
                     </div>
                     <div class="project-box">
-                        <img draggable="false" src="images/project2.PNG">
+                        <img draggable="false" src="images/project2.png">
                         <div class="overlay"></div>
                     </div>
                     <div class="project-box">
