--- a/src/index.html
+++ b/src/index.html
@@ -52,11 +52,11 @@
                         <div class="info-section">
                             <div class="info-section-box">
                                 <div class="info-section-about-me">
-                                    My name is Patryk and I am currently a <b>Junior L2 End User Support Engineer</b> from Wroclaw. I am passionate about programming in <b>Python</b> and I like automating my work also for other people. I have written several programs, which facilitated my work on various tasks, also some programs for the needs of companies.  One of my passions is to build amazing web/desktop applicatons. To achieve this, I immerse myself deeply in the client's goals and study the industry's behavior to understand and code the best experiences. My main goal is not only to create amazing products, but also to build awareness about them. I am person who likes to learn new things and appreciates the advice of experienced persons. In the future, I would like to become a Python programmer.
+                                    My name is Patryk and I am currently a <b>L2 Application Support</b> from Wroclaw. I am passionate about programming in <b>Python</b> and I like automating my work also for other people. I have written several programs, which facilitated my work on various tasks, also some programs for the needs of companies.  One of my passions is to build amazing web/desktop applicatons. To achieve this, I immerse myself deeply in the client's goals and study the industry's behavior to understand and code the best experiences. My main goal is not only to create amazing products, but also to build awareness about them. I am person who likes to learn new things and appreciates the advice of experienced persons. In the future, I would like to become a Python Developer.
                                 </div>
                                 <div class="info-section-rands">
                                     <div class="info-resume hvr-rectangle-out">
-                                        <a href="/assets/CV_Patryk_Ladocha.pdf" download>Resume</a>
+                                        <a href="assets/CV_Patryk_Ladocha.pdf" download>Resume</a>
                                     </div>
                                     <div class="info-social-section">
                                         <a target="_blank" href="https://www.linkedin.com/in/nykram/"><i class="fab fa-linkedin"></i></a>
@@ -85,7 +85,7 @@
                             <div class="skill-item skel">CSS</div>
                             <div class="skill-item skel">SASS</div>
                             <div class="skill-item skel">JavaScript</div>
-                            <div class="skill-item skel">MySQL</div>
+                            <div class="skill-item skel">SQL</div>
                         </div>
                     </div>
                     <div class="skills-box">
@@ -94,11 +94,11 @@
                             Tools
                         </div>
                         <div class="skills-frame tools">
-                            <div class="skill-item skelt" >GitHub</div>
-                            <div class="skill-item skelt">Slack</div>
-                            <div class="skill-item skelt">Trello</div>
+                            <div class="skill-item skelt">Git</div>
+                            <div class="skill-item skelt">Docker</div>
+                            <div class="skill-item skelt">Postman</div>
                             <div class="skill-item skelt">VSC</div>
-                            <div class="skill-item skelt">Adobe Xd</div>
+                            <div class="skill-item skelt">SQL SMS</div>
                         </div>
                     </div>
                     <div class="skills-box">
@@ -107,9 +107,8 @@
                         </div>
                         <div class="skills-frame other">
                             <div class="skill-item skelo">Windows</div>
+                            <div class="skill-item skelo">Linux</div>
                             <div class="skill-item skelo">IT support</div>
-                            <div class="skill-item skelo">AD</div>
-                            <div class="skill-item skelo">KVM</div>
                         </div>
                     </div>  
                 </div>
@@ -121,19 +120,9 @@
                 </div>
                 <div class="project-flexbox">
                     <div class="project-box ">
-                        <img draggable="false" src="images/project.png">
-                        <div class="overlay"></div>
-                    </div>
-                    <div class="project-box">
-                        <img draggable="false" src="images/project2.png">
-                        <div class="overlay"></div>
-                    </div>
-                    <div class="project-box">
-                        <img draggable="false" src="images/project3.png">
-                        <div class="overlay"></div>
-                    </div>
-                    <div class="project-box">
-                        <img draggable="false" src="images/project4.png">
+                        <a target="_blank" href="https://smitelore.com">
+                            <img draggable="false" src="images/project_smitelore.png">
+                        </a>
                         <div class="overlay"></div>
                     </div>
                 </div>
@@ -150,14 +139,12 @@
                         <div class="contact-info">
                             <div><i class="fas fa-envelope"></i>patrykladocha76@gmail.com</div>
                             <div><i class="fas fa-phone-alt"></i>+48 503 154 437</div>
-                            <div><i class="fas fa-map-marker-alt"></i>Gierałtów 59, 59-730 Nowogrodziec, Poland</div>
+                            <div><i class="fas fa-map-marker-alt"></i>57-100 Strzelin, Poland</div>
                         </div>
                        </div>
                     </div>
                 </div>
-
             </div>
-
     </body>
     <script>
     </script>
