format code, changes in text

--- a/index.html
+++ b/index.html
@@ -1,151 +1,163 @@
 <!DOCTYPE HTML>
 <html lang="eng">
-    <head>
-        <meta charset="utf-8">
-        <title>Patryk Ładocha | IT Support</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/hover.css">
-        <link rel="icon" href="images/tab-icon.png">
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://kit.fontawesome.com/97cb90de91.js"></script>
-        <script src="js/index.js"></script>
-    </head>
-    <body>
-        <div class="flex-menu">
-                    <ul>
-                        <li>Home</li>
-                        <li>About me</li>
-                        <li>Skills</li>
-                        <li>Projects</li>
-                        <li>Contact</li>
-                    </ul>
-        </div>
-        <div class="section" id="mainSection" >
-            <div class="flex-section">
-                <div class="background">
-                    <div class="overlay">
-                        <div class="flex-containter">
-                            <div class="box-1">
+
+<head>
+    <meta charset="utf-8">
+    <title>Patryk Ładocha | IT Support</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/hover.css">
+    <link rel="icon" href="images/tab-icon.png">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://kit.fontawesome.com/97cb90de91.js"></script>
+    <script src="js/index.js"></script>
+</head>
+
+<body>
+    <div class="flex-menu">
+        <ul>
+            <li>Home</li>
+            <li>About me</li>
+            <li>Skills</li>
+            <li>Projects</li>
+            <li>Contact</li>
+        </ul>
+    </div>
+    <div class="section" id="mainSection">
+        <div class="flex-section">
+            <div class="background">
+                <div class="overlay">
+                    <div class="flex-containter">
+                        <div class="box-1">
                             Patryk Ładocha
-                            </div>
-                            <div class="box-2">
-                                IT support engineer
-                            </div>
-
+                        </div>
+                        <div class="box-2">
+                            IT support engineer
                         </div>
                     </div>
                 </div>
-            </div>        
+            </div>
         </div>
-            <div class="section" id="aboutmeSection">
-                <div class="flex-section">
-                    <div class="section-title">
-                        About Me
-                    </div>
-                    <div class="about-me-section">
-                        <div class="photo-section">
-                            <div class="photo-frame">
+    </div>
+    <div class="section" id="aboutmeSection">
+        <div class="flex-section">
+            <div class="section-title">
+                About Me
+            </div>
+            <div class="about-me-section">
+                <div class="photo-section">
+                    <div class="photo-frame">
 
+                    </div>
+                </div>
+                <div class="info-section">
+                    <div class="info-section-box">
+                        <div class="info-section-about-me">
+                            My name is Patryk and I am currently a <b>L2 Application Support Engineer</b> from Wroclaw.
+                            I am passionate about programming in <b>Python</b> and I like automating my work also for
+                            other people. I have written several programs, which facilitated my work on various tasks,
+                            also some programs for the needs of companies. One of my passions is to build amazing
+                            web/desktop applicatons. To achieve this, I immerse myself deeply in the client's goals and
+                            study the industry's behavior to understand and code the best experiences. My main goal is
+                            not only to create amazing products, but also to build awareness about them. I am person who
+                            likes to learn new things and appreciates the advice of experienced persons. In the future,
+                            I would like to become a Python Developer.
+                        </div>
+                        <div class="info-section-rands">
+                            <div class="info-resume hvr-rectangle-out">
+                                <a href="assets/CV_Patryk_Ladocha.pdf" download>Resume</a>
+                            </div>
+                            <div class="info-social-section">
+                                <a target="_blank" href="https://www.linkedin.com/in/nykram/"><i
+                                        class="fab fa-linkedin"></i></a>
+                                <a target="_blank" href="https://github.com/xNykram"><i
+                                        class="fab fa-github-square"></i></a>
                             </div>
                         </div>
-                        <div class="info-section">
-                            <div class="info-section-box">
-                                <div class="info-section-about-me">
-                                    My name is Patryk and I am currently a <b>L2 Application Support</b> from Wroclaw. I am passionate about programming in <b>Python</b> and I like automating my work also for other people. I have written several programs, which facilitated my work on various tasks, also some programs for the needs of companies.  One of my passions is to build amazing web/desktop applicatons. To achieve this, I immerse myself deeply in the client's goals and study the industry's behavior to understand and code the best experiences. My main goal is not only to create amazing products, but also to build awareness about them. I am person who likes to learn new things and appreciates the advice of experienced persons. In the future, I would like to become a Python Developer.
-                                </div>
-                                <div class="info-section-rands">
-                                    <div class="info-resume hvr-rectangle-out">
-                                        <a href="assets/CV_Patryk_Ladocha.pdf" download>Resume</a>
-                                    </div>
-                                    <div class="info-social-section">
-                                        <a target="_blank" href="https://www.linkedin.com/in/nykram/"><i class="fab fa-linkedin"></i></a>
-                                        <a target="_blank" href="https://github.com/xNykram"><i class="fab fa-github-square"></i></a>
-                                    </div>
-                                </div>
-                            </div>
+                    </div>
 
-                        </div>
-                    </div>
                 </div>
             </div>
-            <div class="section" id="skillSection">
-                <div class="section-title">
-                    SKILLS
+        </div>
+    </div>
+    <div class="section" id="skillSection">
+        <div class="section-title">
+            SKILLS
+        </div>
+        <div class="skills-flex">
+            <div class="skills-box">
+                <div class="section-subtitle">
+                    Technologies
                 </div>
-                <div class="skills-flex">
-                    <div class="skills-box">
-                        <div class="section-subtitle">
-                            Technologies
-                        </div>
-                        <div class="skills-frame">
-                            <div class="skill-item skel">Python</div>
-                            <div class="skill-item skel">Flask</div>
-                            <div class="skill-item skel">HTML</div>
-                            <div class="skill-item skel">CSS</div>
-                            <div class="skill-item skel">SASS</div>
-                            <div class="skill-item skel">JavaScript</div>
-                            <div class="skill-item skel">SQL</div>
-                        </div>
-                    </div>
-                    <div class="skills-box">
-                        
-                        <div class="section-subtitle">
-                            Tools
-                        </div>
-                        <div class="skills-frame tools">
-                            <div class="skill-item skelt">Git</div>
-                            <div class="skill-item skelt">Docker</div>
-                            <div class="skill-item skelt">Postman</div>
-                            <div class="skill-item skelt">VSC</div>
-                            <div class="skill-item skelt">SQL SMS</div>
-                        </div>
-                    </div>
-                    <div class="skills-box">
-                        <div class="section-subtitle">
-                            Other
-                        </div>
-                        <div class="skills-frame other">
-                            <div class="skill-item skelo">Windows</div>
-                            <div class="skill-item skelo">Linux</div>
-                            <div class="skill-item skelo">IT support</div>
-                        </div>
-                    </div>  
+                <div class="skills-frame">
+                    <div class="skill-item skel">Python</div>
+                    <div class="skill-item skel">Flask</div>
+                    <div class="skill-item skel">HTML</div>
+                    <div class="skill-item skel">CSS</div>
+                    <div class="skill-item skel">SASS</div>
+                    <div class="skill-item skel">JavaScript</div>
+                    <div class="skill-item skel">SQL</div>
                 </div>
+            </div>
+            <div class="skills-box">
 
-            </div>
-            <div class="section" id="projectsSection">
-                <div class="section-title">
-                    Projects
+                <div class="section-subtitle">
+                    Tools
                 </div>
-                <div class="project-flexbox">
-                    <div class="project-box ">
-                        <a target="_blank" href="https://smitelore.com">
-                            <img draggable="false" src="images/project_smitelore.png">
-                        </a>
-                        <div class="overlay"></div>
-                    </div>
+                <div class="skills-frame tools">
+                    <div class="skill-item skelt">Git</div>
+                    <div class="skill-item skelt">Docker</div>
+                    <div class="skill-item skelt">Postman</div>
+                    <div class="skill-item skelt">VSC</div>
+                    <div class="skill-item skelt">SQL SMS</div>
                 </div>
             </div>
-            <div class="section" id="contactSection" >
-                <div class="contact-flex">
-                    <div class="section-title">
-                        Contact
-                    </div>
-                    <div class="contact-section-box">
-                        <div class="button">
-                            <a href="mailto:patrykladocha76@gmail.com"><div class="hvr-grow">Write to me!</div></a>
-                        </div>
-                        <div class="contact-info">
-                            <div><i class="fas fa-envelope"></i>patrykladocha76@gmail.com</div>
-                            <div><i class="fas fa-phone-alt"></i>+48 503 154 437</div>
-                            <div><i class="fas fa-map-marker-alt"></i>57-100 Strzelin, Poland</div>
-                        </div>
-                       </div>
-                    </div>
+            <div class="skills-box">
+                <div class="section-subtitle">
+                    Other
+                </div>
+                <div class="skills-frame other">
+                    <div class="skill-item skelo">Windows</div>
+                    <div class="skill-item skelo">Linux</div>
+                    <div class="skill-item skelo">IT support</div>
                 </div>
             </div>
-    </body>
-    <script>
-    </script>
+        </div>
+
+    </div>
+    <div class="section" id="projectsSection">
+        <div class="section-title">
+            Projects
+        </div>
+        <div class="project-flexbox">
+            <div class="project-box ">
+                <a target="_blank" href="https://smitelore.com">
+                    <img draggable="false" src="images/project_smitelore.png">
+                </a>
+                <div class="overlay"></div>
+            </div>
+        </div>
+    </div>
+    <div class="section" id="contactSection">
+        <div class="contact-flex">
+            <div class="section-title">
+                Contact
+            </div>
+            <div class="contact-section-box">
+                <div class="button">
+                    <a href="mailto:patrykladocha76@gmail.com">
+                        <div class="hvr-grow">Write to me!</div>
+                    </a>
+                </div>
+                <div class="contact-info">
+                    <div><i class="fas fa-envelope"></i>patrykladocha76@gmail.com</div>
+                    <div><i class="fas fa-phone-alt"></i>+48 503 154 437</div>
+                    <div><i class="fas fa-map-marker-alt"></i>57-100 Strzelin, Poland</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</body>
+
 </html>
