add new project

--- a/index.html
+++ b/index.html
@@ -130,9 +130,15 @@
             Projects
         </div>
         <div class="project-flexbox">
-            <div class="project-box ">
+            <div class="project-box">
                 <a target="_blank" href="https://smitelore.com">
                     <img draggable="false" src="images/project_smitelore.png">
+                </a>
+                <div class="overlay"></div>
+            </div>
+            <div class="project-box">
+                <a target="_blank" href="https://github.com/xNykram/xnykram.github.io">
+                    <img draggable="false" src="images/project_portfolio.png">
                 </a>
                 <div class="overlay"></div>
             </div>
